--- a/Ung_dung_Quan_ly/Giao_dien/css/my_custom.css
+++ b/Ung_dung_Quan_ly/Giao_dien/css/my_custom.css
@@ -9,8 +9,7 @@
 input[type=text] {
   border: 2px solid #ddd;
   border-radius: 4px;
-  padding: 5px;
-  margin-top: 10px; 
+  padding: 5px 10px;
 }
 input[type=text]:focus {
   border: 3px solid rgb(189, 189, 189);
@@ -22,5 +21,4 @@ input[type=text]:focus {
 .welcome-message {
   color: green;
   font-size: 14px;
-
 }
