--- a/Ung_dung_Khach_hang/Giao_dien/css/my_custom.css
+++ b/Ung_dung_Khach_hang/Giao_dien/css/my_custom.css
@@ -1,9 +1,61 @@
 .info-book {
   word-wrap: break-word;
-  text-align: center
+  text-align: center;
+  color: #fc636b;
 }
-
 .img-full {
   width: 100%;
   height: 300px;
+  border-radius: 25px; 
+}
+input[type=text] {
+  border: 2px solid #ddd;
+  border-radius: 4px;
+  padding: 5px 10px;
+}
+input[type=text]:focus {
+  border: 3px solid rgb(189, 189, 189);
+}
+.book-mt10 {
+  margin-top: 10px;
+  font-size: 17px;
+}
+.welcome-message {
+  color: green;
+  font-size: 14px;
+}
+.book-btn-detail {
+  font-size: 13px;
+  color: #fff;
+  background: #2fdab8;
+  text-decoration: none;
+  position: relative;
+  border: none;
+  border-radius: 0;
+  width: 50%;
+  text-transform: uppercase;
+  padding: .5em 0;
+  outline: none;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+
+.book-btn-detail:hover {
+  background: rgb(252, 99, 107);
+}
+.book-title-product {
+  font-size: 0.9em;
+  color: #fc636b;
+  text-decoration: none;
+  font-weight: 600;
+}
+.book-mb5 h5 {
+  margin-bottom: 7px;
+}
+.book-mb5 h4 {
+  margin-bottom: 7px;
+}
+.book-category span {
+  color: #fc636b;
+  font-size: 20px;
 }
