--- a/PHONG/Ung_dung_Quan_ly/Giao_dien/css/my_custom.css
+++ b/PHONG/Ung_dung_Quan_ly/Giao_dien/css/my_custom.css
@@ -2,23 +2,41 @@
   word-wrap: break-word;
   text-align: center
 }
+
 .img-full {
   width: 100%;
   height: 300px;
 }
+
 input[type=text] {
   border: 2px solid #ddd;
   border-radius: 4px;
   padding: 5px 10px;
 }
+
 input[type=text]:focus {
   border: 3px solid rgb(189, 189, 189);
 }
+
 .book-mt10 {
   margin-top: 10px;
   font-size: 17px;
 }
+
 .welcome-message {
   color: green;
   font-size: 14px;
+}
+
+.book-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 16px;
+  max-height: 32px;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  min-height: 51px;
+  padding: 0 20px;
+
 }
