--- a/PHONG/Ung_dung_Quan_ly/Giao_dien/css/my_custom.css
+++ b/PHONG/Ung_dung_Quan_ly/Giao_dien/css/my_custom.css
@@ -1,3 +1,16 @@
+.book-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 16px;
+  max-height: 32px;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  min-height: 51px;
+  padding: 0 20px;
+
+}
+
 .info-book {
   word-wrap: break-word;
   text-align: center;
